Bug 137678 - FILEOPEN DOCX VML line shape with Y-flip incorrectly imported
Summary: FILEOPEN DOCX VML line shape with Y-flip incorrectly imported
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Regényi
URL:
Whiteboard: target:7.1.0
Keywords: filter:docx
Depends on:
Blocks: VML-Shapes
  Show dependency treegraph
 
Reported: 2020-10-22 12:37 UTC by NISZ LibreOffice Team
Modified: 2020-11-13 11:57 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (12.88 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-10-22 12:37 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Word and Writer (141.29 KB, image/png)
2020-10-22 12:37 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-10-22 12:37:19 UTC
Created attachment 166626 [details]
Example file from Word

This is similar to bug #97517
Attached file contains a simple line shape with Y direction flipping.
This opens incorrectly in Writer: instead of / we see it as \

Steps to reproduce:
    1. Open attached file

Actual results:
Line is like \

Expected results:
Line should be like / just like in Word

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: e0c72e31c1d455c26110c35e8780d420e17cdea6
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-10-22 12:37:40 UTC
Created attachment 166627 [details]
Screenshot of the original document side by side in Word and Writer
Comment 2 Commit Notification 2020-10-27 13:06:59 UTC
Regényi Balázs committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ca83804ffcd0d6f81fa7c32be990c4ceeb4a60b7

tdf#137678 DOCX VML shape import: fix missing horizontal mirroring

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2020-11-13 11:57:20 UTC
Verified in:

Version: 7.1.0.0.alpha1+ (x64)
Build ID: 72056f39e01e36afac36c62988331b6813c8214f
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded

Thanks for fixing!