tdf#137678 DOCX VML shape import: fix missing horizontal mirroring

The MirroredY property is set (in the CustomShapeGeometry property), but
it is not supported for the LineShape by UNO, so we have to make the
mirroring during importing.

Change-Id: Iaa7e3a352598ad12c5e0d40b4fcd43fd197c4df9